--- a/src/global.css
+++ b/src/global.css
@@ -8,7 +8,8 @@
   --gray-800: #202024;
   --gray-900: #121214;
 
-  --green-500: #00875f
+  --green-300: #00837E;
+  --green-500: #00875f;
 }
 
 * {
@@ -27,4 +28,8 @@ body, input, textarea, button {
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
   font-size: 1rem;
+}
+
+a{
+  transition: all 0.2s
 }
