--- a/src/global.css
+++ b/src/global.css
@@ -10,6 +10,8 @@
 
   --green-300: #00837E;
   --green-500: #00875f;
+
+  --red-500: #F75A68;
 }
 
 :focus{
@@ -35,6 +37,6 @@ body, input, textarea, button {
   font-size: 1rem;
 }
 
-a{
+a, button{
   transition: all 0.2s
 }
