--- a/src/components/Post/index.module.css
+++ b/src/components/Post/index.module.css
@@ -110,8 +110,12 @@
   transition: all 0.1s;
 }
 
-.commentForm  button[type="submit"]:hover{
+.commentForm  button[type="submit"]:not(:disabled):hover{
   background: var(--green-300);
+}
+.commentForm  button[type="submit"]:disabled{
+  opacity:0.7;
+  cursor: not-allowed;
 }
 
 .commentList{
